# gta5-roblox-vehicles

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/src/: archive.rs  handling.rs  joints.rs  main.rs  parts.rs  pipeline.rs  rsc7.rs  server.rs  shaders.rs  skeleton.rs  textures.rs  wire.rs  yft.rs
roblox/: default.project.json
roblox/src/client/: init.client.luau
roblox/src/server/: init.server.luau
roblox/src/shared/: BinaryReader.luau  VehicleLoader.luau  VehiclePhysics.luau  VehicleWire.luau
